mule-user-guide/v/3.5/downloading-and-starting-mule-esb.adoc
= Downloading and Starting Mule ESB

== Downloading and Launching Mule 

[tabs]
------
[tab,title="Mule Studio"]
....
. Before installing Mule Studio, be sure to install one of the compatible http://www.oracle.com/technetwork/java/javase/downloads/index.html[Java Development Kits] on your host machine, refer to https://developer.mulesoft.com/docs/display/35X/Hardware+and+Software+Requirements[Hardware and Software Requirements] for reference. https://developer.mulesoft.com/docs/display/35X/Downloading+and+Starting+Mule+ESB#DownloadingandStartingMuleESB-studioMac[Running Studio on a Mac?]
+

image:/https://developer.mulesoft.com/docs/download/thumbnails/122750663/anypoint_Studio.png?version=1&modificationDate=1421449551018[image]

. Set your `JAVA_HOME` environment variable to the path in which you installed the JDK.
. Visit http://www.mulesoft.com/mule-esb-open-source-esb[mulesoft.com] to download *Mule ESB Enterprise with Anypoint Studio*.
. Click to download the version of Studio that is compatible with your operating system: Windows, Mac, or Linux.
. Unzip the downloaded file to a directory on a hard drive located on your host machine. The *Anypoint Studio* folder or directory appears when the unzip operation completes.
. If using a Mac OS, double-click the *AnypointStudio.app* file, located in the *AnypointStudio* folder.
If using Windows, the *anypointStudio.exe* file, located in the *AnypointStudio* directory.
If using Linux, double-click the anypointStudio file icon, located in the AnypointStudio directory.
+

image:/https://developer.mulesoft.com/docs/download/thumbnails/122750663/finder.png?version=1&modificationDate=1421449546912[image]

. Click OK to accept the default workspace.
+

image:/https://developer.mulesoft.com/docs/download/attachments/122750663/launcher.png?version=1&modificationDate=1421449547368[image]


. Studio launches, then displays a Welcome page. Click *Create a Project* to begin development immediately.
. Optional: https://developer.mulesoft.com/docs/display/35X/Adding+Community+Runtime[Add Community runtime] to your Studio instance.
. Optional: https://developer.mulesoft.com/docs/display/35X/Installing+an+Enterprise+License[Acquire an Enterprise license] (recommended for running applications in production).


[WARNING]
====
Running Studio on a Mac? +
 +
If you're using Mac OS X Mountain Lion, there are two extra considerations to be mindful of when running Anypoint Studio. +
 +
Java Runtime Environment +
 +
Check to confirm that Java runtime environment 7 is in place on your system. From the command line (Terminal app), run: java -version +
 +
The response should appear similar to the following: +
 +
[source]
----
java version "1.7.0_60"
Java(TM) SE Runtime Environment (build 1.7.0_60-b19)
Java HotSpot(TM) 64-Bit Server VM (build 24.60-b09, mixed mode)
----
If a Java runtime environment is not installed, the command triggers a prompt to install the JDK tools directly from Apple. Follow the instructions to download and install JDK  7.

*Application Execution*

By default, Mac OS X restricts execution of applications acquired outside the Apple App Store. Because you download Anypoint Studio outside the App Store, your system may prevent you from running Studio applications and issue a warning message advising you to change your security settings to proceed. (Note: you must have Administrator privileges to adjust the security settings.)

. On your Mac, open *System Preferences*, then navigate to *Security & Privacy*.
. In the *General* tab, under "Allow applications downloaded from:" select the radio button for *Anywhere*.
====
....
[tab,title="Mule Enterprise Runtime with MMC (Trial Version)"]
....
. Before installing Mule Studio, be sure to install one of the compatible http://www.oracle.com/technetwork/java/javase/downloads/index.html[Java Development Kits] on your host machine, refer to https://developer.mulesoft.com/docs/display/35X/Hardware+and+Software+Requirements[Hardware and Software Requirements] for reference.
+

image:/https://developer.mulesoft.com/docs/download/thumbnails/122750663/anypoint_Studio.png?version=1&modificationDate=1421449551018[image]

. Set your `JAVA_HOME` environment variable to the path in which you installed the JDK.
. Visit http://www.mulesoft.com/mule-esb-open-source-esb[mulesoft.com] to download *Mule ESB Enterprise with Anypoint Studio*.
. Navigate to the folder that contains your copy of *Mule Enterprise Standalone*, then unpack and uncompress the file.
. Open a system terminal and navigate to the freshly extracted folder, for example by running cd `mmc-distribution-mule-console-bundle-3.5.0`.
. From the terminal, run the appropriate startup command for your operating system.
+

.. Windows:
+

[source]
----
startup.bat
----
+

.. Linux or Mac:
+

[source]
----
./startup.sh
----

+
. Wait for Mule to start running, which may take a minute or two. MMC will automatically deploy and start running from an embedded Tomcat server. Once Mule and MMC are running, you should see a message similar to the following:
+

[source]
----
Mule running as PID=#####
Tomcat and MMC running as PID=#####
Finished starting Mule and MMC.
----

+
. The Mule startup messages displays the URL where Tomcat is serving the MMC application, for example `http://localhost:8585/mmc-3.5.0.` Use a Web browser to navigate to this URL.
. You will be greeted by the MMC welcome screen, shown below. Log in with username admin, password admin. +
 +
image:/https://developer.mulesoft.com/docs/download/attachments/122750663/mmc_welcome_screen.png?version=1&modificationDate=1421449547136[image]

[NOTE]
To stop Mule, run the shutdown.sh script (or shutdown.bat if on Windows) from the root folder of your installation.

[TIP]
For full details on the different options for running the startup, shutdown and status scripts, see https://developer.mulesoft.com/docs/display/35X/Installing+the+Trial+Version+of+MMC[Installing the Trial Version of MMC].

[TIP]
The trial version is not suitable for running applications in production. To run applications in production, https://developer.mulesoft.com/docs/display/35X/Installing+an+Enterprise+License[acquire an Enterprise license].
....
[tab,title="Mule Enterprise or Community Runtime"]
....
The steps below describe what you need to do to install and run Mule ESB, the same steps apply for both the Community runtime and the Enterprise runtime.

. Before installing Mule Studio, be sure to install one of the compatible http://www.oracle.com/technetwork/java/javase/downloads/index.html[Java Development Kits] on your host machine, refer to https://developer.mulesoft.com/docs/display/35X/Hardware+and+Software+Requirements[Hardware and Software Requirements] for reference.
+

image:/https://developer.mulesoft.com/docs/download/thumbnails/122750663/anypoint_Studio.png?version=1&modificationDate=1421449551018[image]

. Set your `JAVA_HOME` environment variable to the path in which you installed the JDK.
. Visit http://www.mulesoft.com/mule-esb-open-source-esb[mulesoft.com] to download *Mule ESB Enterprise with Anypoint Studio*.
. Navigate to the folder that contains your copy of *Mule Enterprise Standalone*, then unpack and uncompress the file.
. From the command line, start Mule using the following command:
+

.. Windows:
+

[source]
----
mule.bat
----

.. Linux or Mac:
+

[source]
----
./bin/mule
----

. Mule starts running locally on your hard drive.
. To stop Mule, type *CTRL-C*.

[TIP]

For information on advanced use of configuration parameters when launching Mule Enterprise runtime, read https://developer.mulesoft.com/docs/display/35X/Starting+and+Stopping+Mule+ESB[Starting and Stopping Mule ESB]
....
------

== Downloading Enterprise Additions

If you are running *Anypoint Studio* with an *Enterprise runtime*, you can add additional modules to your Studio instance.

* link:/docs/display/current/Installing+Anypoint+Enterprise+Security[Anypoint Enterprise Security] 
* link:/docs/display/current/Anypoint+Connectors[Anypoint Connectors] 
* mailto:sales@mulesoft.com[Contact MuleSoft] to acquire entitlements to access the link:/docs/display/current/MuleSoft+Enterprise+Java+Connector+for+SAP+Reference[SAP Connector] and/or link:/docs/display/current/Mule+High+Availability+HA+Clusters[High Availability Clustering]

== See Also

* Learn more about acquiring and installing an http://www.mulesoft.org/documentation/display/current/Installing+an+Enterprise+License[Enterprise license].
* Read a http://blogs.mulesoft.org/one-studio/[blog post] explaining the Single Studio distribution.
* Get started with link:/docs/display/current/Mule+Fundamentals[Mule Fundamentals].
* Learn more about the link:/docs/display/current/Mule+Management+Console[Mule Management Console].
* link:/docs/display/current/Installing+Extensions[Extend Mule] with plugins, modules, runtimes and connectors.
* Access a list of all the link:/docs/display/current/Studio+Update+Sites[update sites] available for your version of Studio.
* Learn more about our new link:#[release strategy] for CloudHub and Mule ESB.
